Download da imagem comprimida

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-progress": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
     "axios": "^1.13.2",
     "immer": "^11.0.1",
     "lucide-react": "^0.560.0",
